data/derived/sp14/progs/unify/prog1012.ml.out
Characters 0-9:
  min_float 0 3;;
  ^^^^^^^^^
Error: This expression has type float
       This is not a function; it cannot be applied.
